[gd_scene load_steps=68 format=3 uid="uid://dl32l5akqsw1y"]

[ext_resource type="Script" path="res://Scripts/bird.gd" id="1_4aw8w"]
[ext_resource type="PackedScene" uid="uid://b7gqpoye0w0qh" path="res://Scenes/Fire_Ball.tscn" id="2_inmel"]
[ext_resource type="Texture2D" uid="uid://b5l4hnb82lmv2" path="res://Sprites/Birds/Flamingos-Sheet.png" id="3_6ry21"]
[ext_resource type="Texture2D" uid="uid://cuv8rqtr38iag" path="res://Sprites/Birds/Bird.png" id="4_000e6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_er5h8"]
height = 32.5

[sub_resource type="AtlasTexture" id="AtlasTexture_3kg2s"]
atlas = ExtResource("3_6ry21")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_132wf"]
atlas = ExtResource("3_6ry21")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvnrc"]
atlas = ExtResource("3_6ry21")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uogo"]
atlas = ExtResource("3_6ry21")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa006"]
atlas = ExtResource("3_6ry21")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwao"]
atlas = ExtResource("3_6ry21")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q31kc"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_um7ad"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoi5u"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvlk6"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh6m7"]
atlas = ExtResource("4_000e6")
region = Rect2(128, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stc81"]
atlas = ExtResource("4_000e6")
region = Rect2(160, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmw22"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05c6e"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb0fy"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ivv"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiuqr"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h25of"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ev2o"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpga7"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20rqw"]
atlas = ExtResource("4_000e6")
region = Rect2(128, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tbx7"]
atlas = ExtResource("4_000e6")
region = Rect2(160, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qexpy"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8wl4"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8hag"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qv5r"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag8pf"]
atlas = ExtResource("4_000e6")
region = Rect2(128, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf2on"]
atlas = ExtResource("4_000e6")
region = Rect2(160, 864, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6ojl"]
atlas = ExtResource("3_6ry21")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lawg7"]
atlas = ExtResource("3_6ry21")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4sgg"]
atlas = ExtResource("3_6ry21")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipbhd"]
atlas = ExtResource("3_6ry21")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arlso"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6smw"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjtcv"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrcic"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_id0ye"]
atlas = ExtResource("4_000e6")
region = Rect2(128, 832, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1sky"]
atlas = ExtResource("3_6ry21")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6mdx"]
atlas = ExtResource("3_6ry21")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_km020"]
atlas = ExtResource("3_6ry21")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muobb"]
atlas = ExtResource("3_6ry21")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8doc"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 704, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsxtf"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 704, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xidul"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 704, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cpyl"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 704, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpr6m"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 800, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmg44"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 800, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa84y"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 800, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxbqy"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 800, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxtg6"]
atlas = ExtResource("4_000e6")
region = Rect2(128, 800, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lju"]
atlas = ExtResource("3_6ry21")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgnow"]
atlas = ExtResource("3_6ry21")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtmm8"]
atlas = ExtResource("3_6ry21")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqvww"]
atlas = ExtResource("3_6ry21")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5wy"]
atlas = ExtResource("3_6ry21")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxgdj"]
atlas = ExtResource("3_6ry21")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1m2a"]
atlas = ExtResource("4_000e6")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyt2j"]
atlas = ExtResource("4_000e6")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j35lr"]
atlas = ExtResource("4_000e6")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nis1i"]
atlas = ExtResource("4_000e6")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0b6ro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kg2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvnrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uogo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa006")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcwao")
}],
"loop": false,
"name": &"atk",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q31kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um7ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoi5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvlk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh6m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stc81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmw22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05c6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb0fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ivv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiuqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h25of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ev2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpga7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20rqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tbx7")
}],
"loop": true,
"name": &"catch_fly",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qexpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8wl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qv5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag8pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf2on")
}],
"loop": true,
"name": &"die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6ojl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lawg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4sgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipbhd")
}],
"loop": false,
"name": &"dig",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_arlso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6smw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjtcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrcic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id0ye")
}],
"loop": true,
"name": &"front_die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1sky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6mdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km020")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muobb")
}],
"loop": true,
"name": &"idel",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8doc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsxtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xidul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cpyl")
}],
"loop": false,
"name": &"note",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpr6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmg44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa84y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxbqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxtg6")
}],
"loop": true,
"name": &"side_die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgnow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtmm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqvww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxgdj")
}],
"loop": true,
"name": &"side_fly",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1m2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyt2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j35lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nis1i")
}],
"loop": true,
"name": &"want_food",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivadh"]
radius = 0.5

[node name="Flamingos" type="Area2D" node_paths=PackedStringArray("bird_animation", "action_timer")]
script = ExtResource("1_4aw8w")
NAME = "Flamingos"
HP = 150
bird_animation = NodePath("AnimatedSprite2D")
bullet_scene = ExtResource("2_inmel")
action_timer = NodePath("ActionTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_er5h8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0b6ro")
animation = &"side_fly"
autoplay = "idel"
frame_progress = 0.198755
offset = Vector2(0, -12)
metadata/_edit_lock_ = true

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="DropArea" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 3
collision_mask = 3

[node name="DropCollision2D" type="CollisionShape2D" parent="DropArea"]
rotation = 1.5708
shape = SubResource("CircleShape2D_ivadh")
debug_color = Color(1, 0, 0, 0.0980392)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_bird_animation_finished"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="body_entered" from="DropArea" to="." method="_on_drop_area_body_entered"]
[connection signal="body_exited" from="DropArea" to="." method="_on_drop_area_body_exited"]
